--- a/index.html
+++ b/index.html
@@ -1,26 +1,59 @@
 <!doctype html>
 <html lang="fr">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thomas Chevalier · Portfolio</title>
+    <title>Thomas Chevalier | Data Analyst & AI Engineer Portfolio</title>
+
+    <!-- Description -->
     <meta
-      name="description"
-      content="Portfolio bilingue (FR/EN) de Thomas Chevalier, développeur web et passionné d'intelligence artificielle."
+            name="description"
+            content="Portfolio de Thomas Chevalier, étudiant en intelligence artificielle et data analyst. Découvrez mes projets en IA, machine learning, web development et data science."
     />
+
+    <!-- Author -->
     <meta name="author" content="Thomas Chevalier" />
+
+    <!-- Keywords SEO bilingues -->
     <meta
-      name="keywords"
-      content="Thomas Chevalier, portfolio, développeur web, intelligence artificielle, AI engineer, web developer"
+            name="keywords"
+            content="Thomas Chevalier, portfolio, développeur, intelligence artificielle, IA, data analyst, data science, machine learning, deep learning, AI engineer, web developer, frontend, backend, full stack"
     />
+
+    <!-- Langues -->
+    <meta name="language" content="fr,en" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph (partage réseaux sociaux) -->
+    <meta property="og:title" content="Thomas Chevalier | Data Analyst & AI Engineer" />
+    <meta
+            property="og:description"
+            content="Étudiant en intelligence artificielle et data analysis, je conçois des projets alliant machine learning, développement web et data science."
+    />
+    <meta property="og:image" content="https://thomas-chevalier.dev/og-image.svg" />
+    <meta property="og:url" content="https://thomas-chevalier.dev" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Thomas Chevalier | Portfolio IA & Data" />
+    <meta name="twitter:description" content="Data Analyst et AI Engineer – découvrez mes projets et réalisations." />
+    <meta name="twitter:image" content="https://thomas-chevalier.dev/og-image.svg" />
+
+    <!-- Favicon et polices -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@600&display=swap" rel="stylesheet" />
+    <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@600&display=swap"
+            rel="stylesheet"
+    />
+
+    <!-- CSS -->
     <link rel="stylesheet" href="/global.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
